fix: update font size for oculi-text class to improve readability

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p,h1,h2,h3 {
 .oculi-text {
     font-family:"oculi-text",sans-serif;
     font-style: medium;
-    font-size: 15px;
+    font-size: 16px;
 }
 h1{
     font-family:faust, sans-serif;
